--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,32 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/hostButton"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="50dp"
+            android:text="Host Event" />
+
+        <Button
+            android:id="@+id/attendButton"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="50dp"
+            android:text="Attend Event" />
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
