--- a/app/src/main/res/layout/activity_attendee_search.xml
+++ b/app/src/main/res/layout/activity_attendee_search.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical">
 
         <ListView
+            android:id="@+id/eventList"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
 
