Android Bluettooth Attendance

--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_10">
@@ -15,13 +14,23 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your event has started"
+        android:textSize="20sp"
+        />
+
     <Button
         android:id="@+id/endMeetingBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="End Meeting"
+        android:text="View attendees"
         android:onClick="back"
+        android:layout_centerInParent="true"
         >
+
     </Button>
 
-    </LinearLayout>
+    </RelativeLayout>
