--- a/app/src/main/res/layout/activity_attendee_confirm.xml
+++ b/app/src/main/res/layout/activity_attendee_confirm.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.student.bluetoothattendanceapp.AttendeeSearchActivity">
+    tools:context="com.example.student.bluetoothattendanceapp.AttendeeConfirmActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp">
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
         <TextView
             android:id="@+id/eventTitle"
@@ -76,15 +76,8 @@
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:layout_weight="1"
-                android:text="Confirm Event" />
+                android:text="@string/button_confirm" />
 
-            <Button
-                android:id="@+id/returnButton"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
-                android:layout_weight="1"
-                android:text="Return" />
         </LinearLayout>
     </LinearLayout>
 
