--- a/app/src/main/res/layout/activity_attendee_search.xml
+++ b/app/src/main/res/layout/activity_attendee_search.xml
@@ -7,14 +7,28 @@
     tools:context="com.example.student.bluetoothattendanceapp.AttendeeSearchActivity">
 
     <LinearLayout
+        android:id="@+id/listLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/nameText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <TextView
+            android:id="@+id/eventText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <ListView
             android:id="@+id/eventList"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="250dp"></ListView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,15 +41,15 @@
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:layout_weight="1"
-                android:text="Refresh List" />
+                android:text="@string/button_refresh" />
 
             <Button
-                android:id="@+id/returnButton"
+                android:id="@+id/returnButton_Search"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:layout_weight="1"
-                android:text="Return" />
+                android:text="@string/button_return01" />
         </LinearLayout>
     </LinearLayout>
 
