--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,29 +6,39 @@
     android:layout_height="match_parent"
     tools:context="com.example.student.bluetoothattendanceapp.StartActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="107dp">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/hostButton"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/attendeeButton"
-            android:layout_margin="50dp"
-            android:text="@string/button_host_main" />
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="0dp">
 
-        <Button
-            android:id="@+id/attendeeButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="50dp"
-            android:text="@string/button_attend_main" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/hostButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/attendeeButton"
+                android:layout_margin="50dp"
+                android:paddingBottom="25dp"
+                android:paddingTop="25dp"
+                android:text="@string/button_host_main" />
+
+            <Button
+                android:id="@+id/attendeeButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="50dp"
+                android:paddingBottom="25dp"
+                android:paddingTop="25dp"
+                android:text="@string/button_attend_main" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
